Use Crankcase plugins